# github-readme-terminal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: gifos.yml
config/: __init__.py  ansiEscapeColors.toml  ansi_escape_colors.toml  gifos.toml
gifos/: __init__.py  gifos.py
gifos/config/: ansi_escape_colors.toml  gifos.toml  gifos_settings.toml
gifos/effects/: __init__.py  textDecodeEffect.py  textScrambleEffect.py  text_decode_effect.py  text_scramble_effect.py
gifos/fonts/: gohufont-uni-14.pbm  gohufont-uni-14.pil
gifos/modules/: calcRank.py  githubStats.py  hackedTextEffect.py
gifos/modules/helpers/: __init__.py  calcRank.py  githubStats.py  imgbbUpload.py
gifos/modules/textEffects/: __init__.py  textDecodeEffect.py
gifos/utils/: __init__.py  calcAge.py  calcGithubRank.py  calc_age.py  calc_github_rank.py  convertAnsiEscape.py  convert_ansi_escape.py  fetchGithubStats.py  fetch_github_stats.py  githubStats.py  load_config.py  uploadImgBB.py  upload_imgbb.py
gifos/utils/schemas/: ansiEscape.py  ansi_escape.py  githubUserRank.py  githubUserStats.py  github_user_rank.py  github_user_stats.py  imagebb_image.py  imgbbImage.py  userAge.py  user_age.py
